Fix tzWord wrapping

--- a/src/app/words/[word]/page.module.css
+++ b/src/app/words/[word]/page.module.css
@@ -24,6 +24,7 @@
   font-family: inherit;
   background-color: transparent;
   outline: none;
+  resize: none;
 }
 
 .divider {
